# VR_SOFTWARE

./: README.md
python_backend/: .env  .gitignore  .secrets.toml  pyproject.toml  pytest.ini  requirements.txt  run.py  settings.toml
python_backend/app/: __init__.py  development.db
python_backend/app/ext/: config.py  database.py
python_backend/app/home/: __init__.py  forms.py  models.py  routes.py
python_backend/tests/: conftest.py
python_backend/tests/integration/: test_integration.py
python_backend/tests/unit/: test_unit.py
vuejs_frontend/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
vuejs_frontend/src/: App.vue  global.css  vite-env.d.ts
vuejs_frontend/src/components/: FileInput.vue  Header.vue  ProductForm.vue  Sidebar.vue  SidebarMobile.vue
vuejs_frontend/src/components/data_table/: DataTable.vue  DataTableColumnHeader.vue  DataTableFacetedFilter.vue  DataTablePagination.vue  DataTableRowActions.vue  DataTableToolbar.vue  DataTableViewOptions.vue  DropdownMenu.vue  columns.ts
vuejs_frontend/src/components/ui/chart/: ChartLegend.vue
vuejs_frontend/src/components/ui/toast/: index.ts
vuejs_frontend/src/data/: data.ts  navItems.ts  schema.ts
vuejs_frontend/src/lib/: api.ts  utils.ts
vuejs_frontend/src/router/: index.ts
vuejs_frontend/src/types/: Sidebar.ts
vuejs_frontend/src/views/: DashBoard.vue  Product.vue
