[tool.poetry]
name = "vr_software"
description = ""
version = "0.1.0"
authors = ["Enzo M.M. <enzomm.bodyandmind@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
werkzeug = ">=2.0.0,<2.1.0"
dynaconf = "^3.1.12"
Flask-Migrate="3.1.0"
Flask-SQLAlchemy="2.5.1"
flask = "2.0.1"
flask-login = "0.5.0"
wtforms = "2.3.3"
flask-wtf = "0.15.1"
sqlalchemy = "1.4.23"
email-validator = "1.1.3"
python-decouple = "3.4"
gunicorn = "20.1.0"
jinja2 = "3.0.1"
flask-restx = "0.5.1"
flask-cors = "^4.0.1"
selenium = "^4.20.0"

[tool.poetry.group.development.dependencies]
flask-shell-ipython = "^0.5.1"
pytest = "^7.3.1"
pytest-mock = "^3.14.0"
pytest-flask = "^1.3.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
